--- a/manifests/applications/bgd-app.yaml
+++ b/manifests/applications/bgd-app.yaml
@@ -8,7 +8,7 @@ spec:
   project: default
   source:
     path: app/overlays/default/
-    repoURL: https://jayhowell/bgd
+    repoURL: https://github.com/jayhowell/bgd
     targetRevision: main
   destination:
     namespace: bgd
