--- a/manifests/applications/bgd-app.yaml
+++ b/manifests/applications/bgd-app.yaml
@@ -11,7 +11,7 @@ spec:
     repoURL: https://github.com/jayhowell/bgd
     targetRevision: main
   destination:
-    namespace: openshift-gitops
+    namespace: bgd
     server: https://kubernetes.default.svc
   syncPolicy:
     syncOptions:
